app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require jquery-ui/draggable
 *= require jquery-ui/resizable
 *= require_self
 */

 /* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

@import "bootstrap-sprockets";
@import "bootstrap";

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

html, body, #root, .site, #page-container, .page, #elements {
	height: 100%;
}

#root {
	height: 100%;
  display: absolute;
}

 #elements {
	 height: 100%;
   background: green;
 }

 .menu-bar {
   background: gray;
	 border: 1px solid;
   width: 260px;
   height: 100%;
   top: 118px;
   float: left;
   position: absolute;
   z-index: 99;
   transition: left 0.5s;
   left: -280px;
 }

 .menu-bar.show {
   left: 0px;
 }

 .menu-button {
   width: 50px;
   height: 50px;
   background: gray;
   position: absolute;
   top: 340px;
   color: white;
   border-radius: 3px;
   left: -25px;
   transform: rotate(45deg);
 }

 .menu-button span {
   font-size: 50px;
   left: 20px;
   top: -5px;
   display: block;
   transform-origin: center;
   transform: rotate(45deg);
   position: relative;
 }

 .elements-menu {
   width: 80px;
   top: 100px;
   z-index: 1;
   position: relative;
   transform: translateX(50%);
 }

 .pages-menu {
   width: 80px;
   top: 300px;
   z-index: 1;
   position: relative;
   transform: translateX(50%);
 }

 .pages-menu .pages {
	 width: 100%;
 }

 .pages-menu .menu-title {
	 font-size: 30px;
 }

 .elements-menu .menu-title{
  font-size: 30px;
	text-align: center;
 }

 #page-container.editing {
   border: 2px solid black;
   margin-top: 30px;
 }

 .box {
   background: darksalmon;
   width: 100px;
   height: 100px;
 }

#page-container.editing .element:hover {
  cursor: pointer;
  /*border: 2px dotted black;*/
	outline: 2px dotted black;
	z-index: 2;
}

.element.text.editing {
  background: yellow;
}

.element.text .form {
  background: red;
}

.element.text {
	z-index: 3;
}

.element.link {
	z-index: 3;
}

.ui-wrapper img {
	width: 100%;
	height: 100%;
}

.element-properties-menu {
	background: gray;
	z-index: 5;
	position: absolute;
	box-shadow: 1px 1px black;
	color: black;
}

.element-properties-menu .heading {
	font-size: 20px;
	padding: 10px;
	border-bottom: 2px;
	border-style: solid;
}

.element-properties-menu .subheading {
	padding: 10px;
	border-bottom: 2px solid;
}

.element-properties-menu .styles {
	transform: translateX(25%);
}

.element-properties-menu .menu button {
	font-size: 18px;
	cursor: pointer;
	background: gray;
	border: 0;
}

.box {
	z-index: 0;
}


.element:not(.box) {
	z-index: 3;
}

.text {
	z-index: 1;
}

.line {
	z-index: 3;
}

p.element {
	white-space: pre-line;
}

